# CoffeeSHOP

./: README.md
code/coffee-shop/orders/: go.mod  go.sum
code/coffee-shop/orders/cmd/orders/: main.go
code/coffee-shop/orders/config/: local.yaml
code/coffee-shop/orders/internal/config/: config.go
code/coffee-shop/orders/internal/http-server/handlers/get_orders/: get_orders.go
code/coffee-shop/orders/internal/http-server/handlers/save_order/: save_order.go
code/coffee-shop/orders/internal/storage/: storage.go
code/coffee-shop/orders/internal/storage/sqlite/: sqlite.go
code/coffee-shop/sso/: go.mod
code/coffee-shop/sso/cmd/sso/: main.go
code/coffee-shop/sso/config/: local.yaml
code/coffee-shop/sso/internal/storage/sqlite/: sqlite.go
code/coffee-shop/support/: go.mod
code/coffee-shop/support/cmd/support/: main.go
code/coffee-shop/support/config/: local.yaml
code/coffee-shop/support/internal/storage/sqlite/: sqlite.go
code/coffee/app/: build.gradle.kts
code/coffee/app/src/main/: AndroidManifest.xml
code/coffee/app/src/main/cpp/: CMakeLists.txt  jni_password_validator.c  password_validator.c
code/coffee/app/src/main/res/drawable/: edit_text_bg.xml
code/coffee/app/src/main/res/layout-sw600dp/: activity_cart.xml  activity_main_menu.xml  activity_orders.xml  activity_said_menu.xml  (+5 more)
code/coffee/gradle/wrapper/: gradle-wrapper.properties
diagrams/: Activity.md  Class.md  Components_and_deployment.md  Sequence.md  State.md  Use_case.md
docs/: .srs.md.kate-swp  srs.md
docs/tests/: .test-plan.md.kate-swp  test-plan.md  test-result.md
(+26 files in other folders)
